grammars/tree-sitter-javaswing/grammar.js
    program: $ => repeat($._toplevel_statement),

    _toplevel_statement: $ => choice(
      $.statement,
      $.javaswing_event_handler,
      $.javaswing_init_components,
      $.method_declaration,
    ),

    // Literals

    decimal_integer_literal: _ => token(seq(
      DIGITS,
      optional(choice('l', 'L')),
    )),

    true: _ => 'true',

    string_literal: $ => choice($._string_literal, $._multiline_string_literal),
    _string_literal: $ => seq(
      '"',
      repeat(choice(
        $.string_fragment,
        $.escape_sequence,
        $.string_interpolation,
      )),
      '"',
    ),
    _multiline_string_literal: $ => seq(
      '"""',
      repeat(choice(
        alias($._multiline_string_fragment, $.multiline_string_fragment),
        $._escape_sequence,
        $.string_interpolation,
      )),
      '"""',
    ),
    // Workaround to https://github.com/tree-sitter/tree-sitter/issues/1156
    // We give names to the token() constructs containing a regexp
    // so as to obtain a node in the CST.

    string_fragment: _ => token.immediate(prec(1, /[^"\\]+/)),
    null_literal: _ => 'null',

    // Expressions

    object_creation_expression: $ => choice(
      $.javaswing_dialog_creation,
      $.javaswing_button_group_creation,
      $.javaswing_combo_box_creation,
      $.javaswing_item_model_creation,
      $.javaswing_cell_renderer_editor_creation,
      $.javaswing_toolbar_creation,
      $.javaswing_progress_bar_creation,
      $.javaswing_separator_creation,
      $.javaswing_list_creation,
      $.javaswing_scroll_bar_creation,
      $.javaswing_text_editor_creation,
      $.javaswing_password_field_creation,
      $.javaswing_formatted_text_field_creation,
      $.javaswing_text_input_creation,
      $.javaswing_selectable_button_creation,
      $.javaswing_spinner_creation,
      $.javaswing_spinner_model_creation,
      $.javaswing_grid_bag_constraints_creation,
      $.javaswing_insets_creation,
      $.javaswing_dimension_creation,
      $.javaswing_action_structure,
      $.javaswing_timer_structure,
      $.javaswing_swing_worker_creation,
      $.javaswing_document_creation,
      $.javaswing_transfer_handler_creation,
      $.javaswing_component_creation,
      $.javaswing_border_creation,
      $._unqualified_object_creation_expression,
      seq($.primary_expression, '.', $._unqualified_object_creation_expression),
    ),

    javaswing_component_creation: $ => prec.right(seq(
      'new',
      choice(
        seq(
          repeat($._annotation),
          field('type_arguments', $.type_arguments),
          repeat($._annotation),
        ),
        repeat($._annotation),
      ),
      field('type', $.javaswing_component_creation_type),
      field('arguments', $.argument_list),
      optional($.class_body),
    )),

    javaswing_component_creation_type: $ => choice(
      $.javaswing_component_type,
      $.javaswing_component_generic_type,
    ),

    _unqualified_object_creation_expression: $ => prec.right(seq(
      'new',
      choice(
        seq(
          repeat($._annotation),
          field('type_arguments', $.type_arguments),
          repeat($._annotation),
        ),
        repeat($._annotation),
      ),
      field('type', $._simple_type),
      field('arguments', $.argument_list),
      optional($.class_body),
    )),

    field_access: $ => seq(
      field('object', choice($.primary_expression, $.super)),
      optional(seq(
        '.',
        $.super,
      )),
      '.',
      field('field', choice($.identifier, $._reserved_identifier, $.this)),
    ),

    array_access: $ => seq(
      field('array', $.primary_expression),
      '[',
      field('index', $.expression),
      ']',
    ),

    method_invocation: $ => choice(
      $.javaswing_action_command,
      $.javaswing_menu_structure,
      $.javaswing_event_listener,
      $.javaswing_init_components_call,
      $.javaswing_cell_renderer_editor_interaction,
      $.javaswing_progress_bar_interaction,
      $.javaswing_list_selection_interaction,
      $.javaswing_scroll_bar_increment_interaction,
      $.javaswing_scroll_bar_access,
      $.javaswing_text_editor_interaction,
      $.javaswing_formatted_text_field_interaction,
      $.javaswing_text_input_interaction,
      $.javaswing_selectable_button_interaction,
      $.javaswing_combo_box_interaction,
      $.javaswing_table_column_model,
      $.javaswing_scroll_viewport,
      $.javaswing_border_assignment,
      $.javaswing_dialog_interaction,
      $.javaswing_file_chooser_interaction,
      $.javaswing_tabbed_pane_interaction,
      $.javaswing_popup_menu_interaction,
      $.javaswing_split_pane_interaction,
      $.javaswing_item_model_interaction,
      $.javaswing_selection_model_access,
      $._javaswing_generic_show_invocation,
      $.javaswing_table_model_mutation,
      $.javaswing_selection_model,
      $.javaswing_box_factory,
      $.javaswing_bounds_geometry,
      $.javaswing_window_lifecycle,
      $.javaswing_root_pane_structure,
      $.javaswing_keyboard_bindings,
      $.javaswing_action_metadata,
      $.javaswing_document_model,
      $.javaswing_root_pane_extended,
      $.javaswing_threading_invocation,
      $.javaswing_focus_interaction,
      $.javaswing_transfer_handler_interaction,
      $.javaswing_property_setter,
      $.javaswing_layout_assignment,
      $.javaswing_container_add,
      seq(
        choice(
          field('name', $._method_name),
          seq(
            field('object', choice($.primary_expression, $.super)),
            '.',
            optional(seq(
              $.super,
              '.',
            )),
            field('type_arguments', optional($.type_arguments)),
            field('name', $._method_name),
          ),
        ),
        field('arguments', $.argument_list),
      ),
    ),

    javaswing_dialog_interaction: $ => prec(PREC.OBJ_ACCESS + 2, choice(
      $.javaswing_option_pane_dialog,
      $.javaswing_option_pane_context_access,
      seq(
        field('name', $._javaswing_dialog_modality_method),
        field('arguments', $.argument_list),
      ),
      seq(
        field('dialog', choice($.primary_expression, $.super)),
        '.',
        field('name', $._javaswing_dialog_modality_method),
        field('arguments', $.argument_list),
      ),
    )),

    javaswing_option_pane_dialog: $ => prec(PREC.OBJ_ACCESS + 3, seq(
      field('class', $.javaswing_option_pane_class),
      '.',
      field('name', $._javaswing_option_pane_dialog_method),
      field('arguments', $.argument_list),
    )),

    javaswing_option_pane_context_access: $ => prec(PREC.OBJ_ACCESS + 3, seq(
      field('class', $.javaswing_option_pane_class),
      '.',
      field('name', $._javaswing_option_pane_context_method),
      field('arguments', $.argument_list),
    )),

    javaswing_option_pane_constant: $ => prec(PREC.OBJ_ACCESS + 4, seq(
      field('class', $.javaswing_option_pane_class),
      '.',
      field('constant', $._javaswing_option_pane_constant_name),
    )),

    javaswing_option_pane_class: _ => prec(PREC.OBJ_ACCESS + 5, choice(
      'JOptionPane',
      token(seq('javax', '.', 'swing', '.', 'JOptionPane')),
    )),

    javaswing_dialog_creation: $ => prec.right(PREC.OBJ_INST + 1, seq(
      'new',
      repeat($._annotation),
      field('type', $.javaswing_dialog_creation_type),
      field('arguments', $.argument_list),
      optional($.class_body),
    )),

    javaswing_dialog_creation_type: $ => prec(PREC.OBJ_INST + 2, $.javaswing_dialog_type),

    javaswing_dialog_type: _ => choice(
      'JDialog',
      'JOptionPane',
      token(seq('javax', '.', 'swing', '.', 'JDialog')),
      token(seq('javax', '.', 'swing', '.', 'JOptionPane')),
    ),

    javaswing_combo_box_reference_type: $ => choice(
      $.javaswing_combo_box_class,
      $.javaswing_combo_box_generic_type,
      $.javaswing_combo_box_array_type,
    ),

    javaswing_combo_box_generic_type: $ => prec.dynamic(PREC.GENERIC + 1, seq(
      field('type', $.javaswing_combo_box_class),
      $.type_arguments,
    )),

    javaswing_combo_box_class: _ => choice(
      ...JAVASWING_COMBO_BOX_TYPES.map(type => type),
      token(seq('javax', '.', 'swing', '.', 'JComboBox')),
    ),

    _javaswing_generic_show_invocation: $ => prec(PREC.OBJ_ACCESS + 1, seq(
      field('object', choice($.primary_expression, $.super)),
      '.',
      field('name', $._javaswing_popup_menu_display_method),
      field('arguments', $.argument_list),
    )),

    javaswing_container_add: $ => choice(
      seq(
        field('container', $.javaswing_content_pane_access),
        '.',
        field('name', $._javaswing_container_add_method),
        field('arguments', $.javaswing_container_add_arguments),
      ),
      seq(
        field('container', choice($.primary_expression, $.super)),
        '.',
        field('name', $._javaswing_container_add_method),
        field('arguments', $.javaswing_container_add_component_creation_arguments),
      ),
      seq(
        field('container', choice($.primary_expression, $.super)),
        '.',
        field('name', $._javaswing_container_add_method),
        field('arguments', $.javaswing_container_add_border_layout_arguments),
      ),
    ),

    javaswing_content_pane_access: $ => choice(
      seq(
        field('name', $._javaswing_get_content_pane_method),
        field('arguments', $.argument_list),
      ),
      seq(
        field('object', $.this),
        '.',
        field('name', $._javaswing_get_content_pane_method),
        field('arguments', $.argument_list),
      ),
    ),

    javaswing_container_add_arguments: $ => seq(
      '(',
      field('component', $.expression),
      optional(seq(
        ',',
        field('constraints', $.expression),
        optional(seq(
          ',',
          field('index', $.expression),
        )),
      )),
      ')',
    ),

    javaswing_container_add_component_creation_arguments: $ => prec(PREC.OBJ_INST + 1, seq(
      '(',
      field('component', $.javaswing_component_creation),
      optional(seq(
        ',',
        field('constraints', $.expression),
        optional(seq(
          ',',
          field('index', $.expression),
        )),
      )),
      ')',
    )),

    javaswing_container_add_border_layout_arguments: $ => seq(
      '(',
      field('component', $.expression),
      ',',
      field('constraints', $.javaswing_border_layout_constraint),
      optional(seq(
        ',',
        field('index', $.expression),
      )),
      ')',
    ),

    javaswing_border_layout_constraint: $ => seq(
      'BorderLayout',
      '.',
      choice(
        'NORTH',
        'SOUTH',
        'EAST',
        'WEST',
        'CENTER',
        'BEFORE_FIRST_LINE',
        'AFTER_LAST_LINE',
        'BEFORE_LINE_BEGINS',
        'AFTER_LINE_ENDS',
        'PAGE_START',
        'PAGE_END',
        'LINE_START',
        'LINE_END',
      ),
    ),

    _javaswing_container_add_method: _ => 'add',

    _javaswing_get_content_pane_method: _ => 'getContentPane',

    javaswing_window_lifecycle: $ => prec(PREC.OBJ_ACCESS + 2, choice(
      seq(
        field('name', $._javaswing_window_lifecycle_method),
        field('arguments', $.argument_list),
      ),
      seq(
        field('window', choice($.primary_expression, $.super)),
        '.',
        field('name', $._javaswing_window_lifecycle_method),
        field('arguments', $.argument_list),
      ),
    )),

    _javaswing_window_lifecycle_method: _ => choice(
      ...JAVASWING_WINDOW_LIFECYCLE_METHODS.map(method => method),
    ),

    _javaswing_option_pane_dialog_method: _ => choice(
      ...JAVASWING_OPTION_PANE_DIALOG_METHODS.map(method => method),
    ),

    _javaswing_option_pane_context_method: _ => choice(
      ...JAVASWING_OPTION_PANE_CONTEXT_METHODS.map(method => method),
    ),

    _javaswing_option_pane_constant_name: _ => choice(
      ...JAVASWING_OPTION_PANE_CONSTANTS.map(name => name),
    ),

    _javaswing_dialog_modality_method: _ => choice(
      ...JAVASWING_DIALOG_MODALITY_METHODS.map(method => method),
    ),

    _method_name: $ => choice(
      $.identifier,
      $._reserved_identifier,
      $._javaswing_container_add_method,
      $._javaswing_get_content_pane_method,
      $._javaswing_set_layout_method,
      $._javaswing_property_setter_method,
      $._javaswing_table_model_mutation_method,
      $._javaswing_event_listener_method,
      $._javaswing_action_command_setter_method,
      $._javaswing_action_command_getter_method,
      $._javaswing_set_border_method,
      $._javaswing_set_viewport_border_method,
      $._javaswing_border_factory_method,
      $._javaswing_box_factory_method,
      $._javaswing_bounds_geometry_method,
      $._javaswing_window_lifecycle_method,
      $._javaswing_root_pane_structure_method,
      $._javaswing_option_pane_dialog_method,
      $._javaswing_option_pane_context_method,
      $._javaswing_dialog_modality_method,
      $._javaswing_file_chooser_dialog_method,
      $._javaswing_file_chooser_selection_method,
      $._javaswing_file_chooser_configuration_method,
      $._javaswing_tabbed_pane_tab_method,
      $._javaswing_tabbed_pane_selection_method,
      $._javaswing_tabbed_pane_lookup_method,
      $._javaswing_tabbed_pane_appearance_method,
      $._javaswing_tabbed_pane_layout_method,
      $._javaswing_split_pane_component_method,
      $._javaswing_split_pane_divider_method,
      $._javaswing_split_pane_orientation_method,
      $._javaswing_scroll_bar_access_method,
      $._javaswing_scroll_bar_increment_method,
      $._javaswing_text_editor_method,
      $._javaswing_combo_box_selection_method,
      $._javaswing_combo_box_popup_method,
      $._javaswing_combo_box_renderer_editor_method,
      $._javaswing_combo_box_display_method,
      $._javaswing_combo_box_item_method,
      $._javaswing_item_model_method,
      $._javaswing_cell_renderer_editor_method,
    ),
    

    argument_list: $ => seq('(', commaSep($.expression), ')'),

    type_arguments: $ => seq(
      '<',
      commaSep(choice($._type, $.wildcard)),
      '>',
    ),

    dimensions: $ => prec.right(repeat1(
      seq(repeat($._annotation), '[', ']'),
    )),

    block: $ => seq(
      '{', repeat($.statement), '}',
    ),

    expression_statement: $ => seq(
      $.expression,
      ';',
    ),

    return_statement: $ => seq(
      'return',
      optional($.expression),
      ';',
    ),

    _annotation: $ => choice(
      $.marker_annotation,
      $.annotation,
    ),

    class_declaration: $ => seq(
      optional($.modifiers),
      'class',
      field('name', $.identifier),
      optional(field('type_parameters', $.type_parameters)),
      optional(field('superclass', $.superclass)),
      optional(field('interfaces', $.super_interfaces)),
      optional(field('permits', $.permits)),
      field('body', $.class_body),
    ),

    javaswing_screen: $ => prec(PREC.DECL + 1, seq(
      optional($.modifiers),
      'class',
      field('name', $.identifier),
      optional(field('type_parameters', $.type_parameters)),
      field('superclass', $.javaswing_screen_superclass),
      optional(field('interfaces', $.super_interfaces)),
      optional(field('permits', $.permits)),
      field('body', $.class_body),
    )),

    javaswing_screen_superclass: $ => seq(
      'extends',
      field('type', $.javaswing_screen_type),
    ),

    javaswing_screen_type: $ => choice(
      choice(...JAVASWING_SCREEN_SWING_TYPES),
      choice(...JAVASWING_SCREEN_AWT_TYPES),
      token(seq('javax', '.', 'swing', '.', choice(...JAVASWING_SCREEN_SWING_TYPES))),
      token(seq('java', '.', 'awt', '.', choice(...JAVASWING_SCREEN_AWT_TYPES))),
    ),

    superclass: $ => seq(
      'extends',
      $._type,
    ),

    class_body: $ => seq(
      '{',
      repeat($._class_body_declaration),
      '}',
    ),

    void_type: _ => 'void',

    this: _ => 'this',
